fix loi user het han
